--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome!</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="header-top">
+            <h1 class="basic-title">G3 Architects</h3>
+            <nav>
+                <ul>
+                    <li><a href="" class="nav-txt">Home</a></li>
+                    <li><a href="" class="nav-txt">About</a></li>
+                    <li><a href="" class="nav-txt">Contact Us</a></li>
+                    <li><a href="" class="nav-txt">Login</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-text-part">
+            <div class="header-words">
+            <h1 class="big-title">Brand New <br> Group of Architects</h1>
+            <h6>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br>    some form, by injected humour, or randomised words which don't look even</h6>
+            <button class="btn">Explore More</button>
+            </div>
+        </div>
+        <div class="header-image">
+            <div class="test">
+                <img src="/images/banner.png" alt="" class="hd-image">
+            </div>
+        </div>
     </header>
 
     <main>
@@ -16,7 +39,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
