--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome!</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header class="header">
+    <section class="header">
         <div class="header-top">
             <h1 class="basic-title">G3 Architects</h3>
-            <nav>
-                <ul>
-                    <li><a href="" class="nav-txt">Home</a></li>
-                    <li><a href="" class="nav-txt">About</a></li>
-                    <li><a href="" class="nav-txt">Contact Us</a></li>
-                    <li><a href="" class="nav-txt">Login</a></li>
-                </ul>
-            </nav>
+            <div class="nav">
+                <nav>
+                    <ul class="nav-ul">
+                        <li><a href="" class="nav-txt">Home</a></li>
+                        <li><a href="" class="nav-txt">About</a></li>
+                        <li><a href="" class="nav-txt">Contact Us</a></li>
+                        <li><a href="" class="nav-txt">Login</a></li>
+                    </ul>
+                </nav>
+            </div>  
         </div>
         <div class="header-text-part">
             <div class="header-words">
@@ -29,10 +31,10 @@
         </div>
         <div class="header-image">
             <div class="test">
-                <img src="/images/banner.png" alt="" class="hd-image">
+                <img src="./images/banner.png" alt="" class="hd-image">
             </div>
         </div>
-    </header>
+    </section>
 
     <main>
 
