--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
     </section>
 
     <main>
+        <section class="top-body">
+            <div class="top-body-image">
+                <div class="images">
+                    <img src="./images/team1.png" alt="" class="">
+                    <img src="./images/team2.png" alt="">
+                    <img src="./images/team3.png" alt="">
+                    <img src="./images/team4.png" alt="">
+                </div>
+            </div>
+            <div class="top-body-texts">
+                <h1 class="basic-title"><span class="quick-list">Quick list</span> of Our <br><span class="features">Features</span></h1>
+                <h3 class="top-body-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by injected <br> humour, or randomised words which don't look even</h3>
+                <button class="btn">Explore More</button>
+
+            </div>
+        </section>
 
     </main>
 
