--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@
             </div>
         </section>
 
+        <!-- mid body  -->
+
+        <section class="middle-body">
+            <div class="mid-body-div">
+                <div class="mid-body-text">
+                    <div class="text-block-spr">
+                        <h1>Features you will <br> love & enjoy</h1>
+                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, ipsum neque porro fugiat libero eaque unde omnis consectetur voluptas vitae.</h3>
+                    </div>
+                    <div class="text-blocks">
+                        <h3>Desktop and Mobile</h3>
+                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                    </div>
+                    <div class="text-blocks">
+                        <h3>Desktop and Mobile</h3>
+                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                    </div>
+                    <div class="text-blocks"> 
+                        <h3>Desktop and Mobile</h3>
+                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                    </div>
+                    <div class="text-blocks">
+                        <h3>Desktop and Mobile</h3>
+                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                    </div>
+                </div>
+                <div class="mid-body-image">
+                    <div class="mid-img">
+                        <img src="./images/architect.png" alt="">
+                    </div>
+                </div>
+            </div>
+            
+        </section>
+
     </main>
 
     <footer>
