top body responsive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="header-words">
             <h1 class="big-title">Brand New <br> Group of Architects</h1>
             <h6>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br>    some form, by injected humour, or randomised words which don't look even</h6>
-            <button class="btn">Explore More</button>
+            <button class="btn"><a href="">Explore More</a></button>
             </div>
         </div>
         <div class="header-image">
@@ -49,7 +49,7 @@
             <div class="top-body-texts">
                 <h1 class="basic-title"><span class="quick-list">Quick list</span> of Our <br><span class="features">Features</span></h1>
                 <h3 class="top-body-description">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by injected <br> humour, or randomised words which don't look even</h3>
-                <button class="btn">Explore More</button>
+                <button class="btn"><a href="">Explore More</a></button>
 
             </div>
         </section>
@@ -60,30 +60,31 @@
             <div class="mid-body-div">
                 <div class="mid-body-text">
                     <div class="text-block-spr">
-                        <h1>Features you will <br> love & enjoy</h1>
-                        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, ipsum neque porro fugiat libero eaque unde omnis consectetur voluptas vitae.</h3>
+                        <h1 class="basic-title">Features you will <br> love & enjoy</h1>
+                        <h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</h3>
                     </div>
                     <div class="text-blocks">
                         <h3>Desktop and Mobile</h3>
-                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                        <h5>There are many variations of passages of Lorem Ipsum available,  but the majority have suffered alteration in some form, by  injected humour, or randomised...........</h5>
                     </div>
                     <div class="text-blocks">
                         <h3>Desktop and Mobile</h3>
-                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                        <h5>There are many variations of passages of Lorem Ipsum available,  but the majority have suffered alteration in some form, by  injected humour, or randomised...........</h5>
                     </div>
                     <div class="text-blocks"> 
                         <h3>Desktop and Mobile</h3>
-                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                        <h5>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</h5>
                     </div>
                     <div class="text-blocks">
                         <h3>Desktop and Mobile</h3>
-                        <h5>Hiji biji jijin ksfhljhsfdijhsdfljh dfsjhskdlfjhsljdkfhljk</h5>
+                        <h5>There are many variations of passages of Lorem Ipsum available,but the majority have suffered alteration in some form, by injected humour, or randomised...........</h5>
                     </div>
                 </div>
                 <div class="mid-body-image">
                     <div class="mid-img">
                         <img src="./images/architect.png" alt="">
                     </div>
+                    <button class="big-btn"><a href="" class="big-btn-small-text"><span class="big-btn-big-text">10+ Year</span><br>experience</a></button>
                 </div>
             </div>
             
