mid body responsive

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
             
         </section>
 
+        <!-- bottom body  -->
+
+        <section class="bottom-body"></section>
+
     </main>
 
     <footer>
