bottom body responsive

--- a/index.html
+++ b/index.html
@@ -92,8 +92,45 @@
 
         <!-- bottom body  -->
 
-        <section class="bottom-body"></section>
-
+        <section class="bottom-body">
+            <div class="bottom-texts">
+                <div >
+                <h1 class="big-title">Some Facts</h1>
+                <h4>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</h4>
+                </div>
+            </div>
+            <div class="boxes">
+                <div class="box">
+                    <img src="./images/icons/ribon.png" alt="">
+                    <h3>54</h3>
+                    <h4>Award Winning</h4>
+                </div>
+                <div class="box">
+                    <img src="./images/icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <h4>Project Finished</h4>
+                </div>
+                <div class="box">
+                    <img src="./images/icons/customers.png" alt="">
+                    <h3>590</h3>
+                    <h4>Clients Worked</h4>
+                </div>
+                <div class="box">
+                    <img src="./images/icons/email.png" alt="">
+                    <h3>22578</h3>
+                    <h4>Email Send</h4>
+                </div>
+            </div>
+            
+        </section>
+        <section class="sponsors">
+            <div class="sponsor-text">
+                <div>
+                    <h2 class="big-title">Our Sponspors</h2>
+                    <h4>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</h4>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
