--- a/index.html
+++ b/index.html
@@ -123,18 +123,32 @@
             </div>
             
         </section>
+
+        <!-- sponsors  -->
+
+
         <section class="sponsors">
-            <div class="sponsor-text">
+            <div class="sponser-text">
                 <div>
-                    <h2 class="big-title">Our Sponspors</h2>
-                    <h4>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</h4>
+                <h1 class="big-title">Our Sponspors</h1>
+                <h3>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</h3>
                 </div>
             </div>
+            <div class="sponsor-icon">
+                <div><img src="./images/sponsors/spotify.png" alt=""></div>
+                <div><img src="./images/sponsors/amazon.png" alt=""></div>
+                <div><img src="./images/sponsors/google.png" alt=""></div>
+                <div><img src="./images/sponsors/telerama.png" alt=""></div>
+                <div><img src="./images/sponsors/figma.png" alt=""></div>
+            </div>
+            
         </section>
     </main>
 
     <footer>
-
+        <div class="footer-part">
+            <h2>All rights reserved copyright@2023 startup landing page design</h2>
+        </div>
     </footer>
 </body>
 </html>
