--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
                 </div>
                 <div class="mid-body-image">
                     <div class="mid-img">
-                        <img src="./images/architect.png" alt="">
+                        <div><img src="./images/architect.png" alt=""></div>
                     </div>
-                    <button class="big-btn"><a href="" class="big-btn-small-text"><span class="big-btn-big-text">10+ Year</span><br>experience</a></button>
+                    <div>
+                        <button class="big-btn"><a href="" class="big-btn-small-text"><span class="big-btn-big-text">10+ Year</span><br>experience</a></button>
+                    </div>
+                    
                 </div>
             </div>
             
